# RL_learning

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  render.yaml
.clawdbot/: README.md  check-agents.py  check-agents.sh  cleanup-worktrees.sh  spawn-agent.sh  task_registry.py
.clawdbot/prompts/: task_template.txt
.github/workflows/: ci.yml
core/: actor_critic.py  bandits.py  dqn.py  policy_gradient.py  ppo.py  q_learning.py  random_utils.py
docs/: HEALTH_BASELINE.md
examples/: 01_multi_armed_bandit.py  02_q_learning_gridworld.py  03_dqn_cartpole.py  04_policy_gradient_cartpole.py  05_actor_critic_cartpole.py  06_ppo_cartpole.py
state/: state_store.py
tests/: test_actor_critic.py  test_api_tasks.py  test_dqn.py  test_policy_gradient.py  test_ppo.py  test_q_learning.py
web/: app.py  schemas.py  task_manager.py
web/routers/: actor_critic.py  bandit.py  cartpole.py  gridworld.py  policy_gradient.py  ppo.py  tasks.py
web/static/: actor_critic.html  actor_critic.js  app.js  cartpole.html  cartpole.js  gridworld.html  gridworld.js  index.html  policy_gradient.html  policy_gradient.js  ppo.html  ppo.js  style.css
